@@ -6,6 +6,7 @@ https://cyberduck.io/
 - [Feature] Default connection profile for Microsoft Sharepoint Online (#10115)
 - [Feature] Support for eu-west-3 (Stockholm) region (S3)
 - [Feature] Add --profile option to select connection profile (CLI)
+- [Feature] Add --nochecksum option to skip verifying checksums (CLI)
 - [Bugfix] Stop button to interrupt transfer (#10363)
 - [Bugfix] Save passphrase for private key in keychain only after successful connect (#10526)
 - [Bugfix] Failure authenticating with proxy using Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
